--- a/Documentation/AV_New_Blog_Setup.html
+++ b/Documentation/AV_New_Blog_Setup.html
@@ -12,14 +12,37 @@
 
 <h2 id="addanewsite">Add a New Site</h2>
 
-<ol>
-<li><p>In the <a href="http://areavoices.com/wp-admin/network/site-new.php">network admin dashboard</a>: <code>Sites → Add New</code></p></li>
-<li><p>Fill in the <strong>Site Address</strong>, <strong>Site Title</strong> and <strong>Admin Email</strong></p></li>
-<li><p>Admin Email: <code>areavoices@fccinteractive.com</code></p></li>
-<li><p>Click <code>Add Site</code> to create the new site.</p></li>
-<li><p>Once the site has been created, click <code>Visit Dashboard</code> on the &#8220;site added&#8221; notification.</p></li>
-<li></li>
-</ol>
+<ul>
+<li>In the <a href="http://areavoices.com/wp-admin/network/site-new.php">network admin dashboard</a>: <code>Sites → Add New</code></li>
+</ul>
+
+<blockquote>
+<p><img src="https://raw.githubusercontent.com/openfcci/areavoices-theme/development/Documentation/images/1.png" alt="Add New Site" /></p>
+</blockquote>
+
+<ul>
+<li>Fill in the <strong>Site Address</strong>, <strong>Site Title</strong> and <strong>Admin Email</strong></li>
+</ul>
+
+<blockquote>
+<p><img src="https://raw.githubusercontent.com/openfcci/areavoices-theme/development/Documentation/images/2.png" alt="Add New Site" />
+ - Admin Email: <code>areavoices@fccinteractive.com</code></p>
+</blockquote>
+
+<ul>
+<li>Click <code>Add Site</code> to create the new site.</li>
+</ul>
+
+<blockquote>
+<figure>
+<img src="https://raw.githubusercontent.com/openfcci/areavoices-theme/development/Documentation/images/3.png" alt="Add New Site" />
+<figcaption>Add New Site</figcaption>
+</figure>
+</blockquote>
+
+<ul>
+<li>Once the site has been created, click <code>Visit Dashboard</code> on the &#8220;site added&#8221; notification.</li>
+</ul>
 
 <p>===</p>
 
