--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ---
 layout: default
-title: jquery.adaptive-backgrounds.js &bull; A jQuery plugin for extracting dominant colors from images and applying it to its parent
+title: AreaVoices &bull; A contributor theme for the AreaVoices network
 ---
